--- a/mloanCopy/.classpath
+++ b/mloanCopy/.classpath
@@ -6,37 +6,37 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/slipp/lib/annotations-api.jar">
+	<classpathentry kind="lib" path="lib/annotations-api.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/slipp/lib/ecj-4.15.jar">
+	<classpathentry kind="lib" path="lib/ecj-4.15.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/slipp/lib/tomcat-dbcp.jar">
+	<classpathentry kind="lib" path="lib/tomcat-dbcp.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/slipp/lib/tomcat-embed-core.jar">
+	<classpathentry kind="lib" path="lib/tomcat-embed-core.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/slipp/lib/tomcat-embed-el.jar">
+	<classpathentry kind="lib" path="lib/tomcat-embed-el.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/slipp/lib/tomcat-embed-jasper.jar">
+	<classpathentry kind="lib" path="lib/tomcat-embed-jasper.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/slipp/lib/tomcat-embed-websocket.jar">
+	<classpathentry kind="lib" path="lib/tomcat-embed-websocket.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
